--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <html>
 <meta charset="UTF-8">
 <head>
-<title>Circlemarkr</title>
+<title>TinyExtensionPack</title>
 <script src="options.js"></script>
 <style>
 body {
