--- a/options.html
+++ b/options.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <head>
 <title>TinyExtensionPack</title>
+<script src="jquery-1.8.3.min.js"></script>
 <script src="options.js"></script>
 <style>
 body {
